# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.77 2015/09/15 13:53:27 dankogai Exp dankogai $
#
$Revision: 2.77 $ $Date: 2015/09/15 13:53:27 $
! lib/Encode/Supported.pod
  Applied: RT#107146: [PATCH] fix a spelling mistake
  https://rt.cpan.org/Public/Bug/Display.html?id=107146

2.77 2015/09/15 13:53:27
! Unicode/Unicode.xs Unicode/Unicode.pm
  Address RT#107043: If no BOM is found, the routine dies.
  When you decode from UTF-(16|32) without -BE or LE without BOM,
  Encode now assumes BE accordingly to RFC2781 and the Unicode
  Standard version 8.0
  https://rt.cpan.org/Public/Bug/Display.html?id=107043
! Makefile.PL encoding.t
  Mend pull/42
! Encode.xs Makefile.PL encoding.pm encoding.t
  Pulled: precompile 1252 table as that is now the Pod::Simple default
  https://github.com/dankogai/p5-encode/pull/42

2.76 2015/07/31 02:18:28
! ucm/koi8-u.ucm
  Pulled: Fix 0x95
  https://github.com/dankogai/p5-encode/pull/41

2.75 2015/06/30 09:59:53
! Unicode/Unicode.pm Unicode/Unicode.xs encoding.pm
  VERSION++'ed to make bleadperl happy
  Message-Id: <CADED=K4QjMxGFAOLEuZUx3OtN-d-hokhurr4BYBE2E3okoxA7g@mail.gmail.com>

2.74 2015/06/25
! Unicode/Unicode.xs
  Applied: #101486: [PATCH] reduce compiler warnings and stderr noise (again)
  https://rt.cpan.org/Ticket/Display.html?id=101486
! bin/enc2xs
  Applied patch: #105471: make Encode build with -pedantic
  https://rt.cpan.org/Ticket/Display.html?id=105471
! Byte/Makefile.PL
  CN/Makefile.PL
  EBCDIC/Makefile.PL
  JP/Makefile.PL
  KR/Makefile.PL
  Makefile.PL
  Symbol/Makefile.PL
  TW/Makefile.PL
  Applied patch: #102826: non-deterministic Makefiles
  https://rt.cpan.org/Ticket/Display.html?id=102826

2.73 2015/04/15 23:14:01
! lib/Encode/MIME/Header.pm
  Addressed: RT#104422
     decode('MIME-header') does not properly join similar Q encoded-words
  https://rt.cpan.org/Ticket/Display.html?id=104422

2.73 2015/04/15 23:14:01
! MANIFEST
+ t/isa.t
! Encode.pm